# mono-expo-kit

./: .eslintrc.js  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.tpl  bun.lockb  cliff.toml  package.json  tsconfig.json  turbo.json
cli/: package.json  tsconfig.json
cli/src/: constants.ts  type.ts
cli/src/command/: Cargo.toml
cli/src/command/src/: constants.rs  lib.rs  main.rs  render_logo.rs  set_language.rs  set_navigation.rs  set_package_manager.rs  set_project_name.rs  themes.rs
cli/src/template/base/: app.config.ts.hbs  index.js.hbs  package.json.hbs
cli/src/template/base/src/: App.tsx.hbs
cli/src/template/base/src/assets/icons/: create-svg.tsx.hbs  index.ts
cli/src/template/base/src/assets/images/: index.ts
docs/create-expo-kit-docs/: package.json
