[package]
name = "ekc"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
handlebars = { workspace = true }
serde = { workspace = true }
fs_extra = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
serde_json = { workspace = true }
console = { workspace = true }
once_cell = { workspace = true }